copy but needs styling

--- a/women-who-feel.html
+++ b/women-who-feel.html
@@ -57,43 +57,35 @@ inside-the-course:
     background_image: /uploads/images/women-who-feel-4.png
     image_focus: left
 testimonials:
-  background_image: /uploads/images/manamei-93.JPEG
+  background_image: /uploads/images/manamei-58.jpg
   overlay_style: dark
   testimonials:
+    - testimonial: This work completely changed my life and brought me to find the missing pieces of so many parts of myself, and continues to be my go-to way to come home to myself, clear, align and embody.
+    - testimonial: I am so grateful for this medicine and the way it weaves through me, supporting me to find ways to embrace all the parts of me that are unknown or I have disowned.
+    - testimonial: I am so happy I have taken the leap, as this wonderful practice has helped me navigate my personal challenges with ease and embody a powerful feminine energy.
+    - testimonial: When I did the practice for the first time, I cried ... because it moved me a lot and evoked emotions. After the practice, I felt lightness, softness. I felt like energy, suppressed emotions and blocks came out with each exhalation. It's unbelievable how quickly I was able to go in and feel the change.
     - testimonial: I clearly see and feel the changes in my life and in my body. I see more fluidity in every parts of the every day life, professional, personal…It’s really amazing and magical !!! I feel more present, more grounded, more feminine, more aware, more confident, more a lot of things!!! I also have more creativity.
-    - testimonial: I’m getting to know myself better with every Mana Movement practice. I’m becoming more confident and believe in myself. I'm showing myself to the world in a more authentic way.
-    - testimonial: My main intention when I began the Mana Movement practice was to feel more open, comfortable, confident, and at ease in my own body—ultimately to trust myself on a deeper level. I wanted to break free of worrying about how others might perceive or judge me. And wow, so far the whole experience has already been about this—and so much more.
-    - testimonial: My energy is exploding! I feel so emotionally stable and safe. Life is just flowing…
   border: border-y border-feature
-investment:
-  heading: The Offering
-  includes:
-    heading: What's included
-    list:
-      - list-item: Receive lifetime access to all course curriculum!
-      - list-item: 4 video-guided Mana Movement Practices
-      - list-item: 2 BONUS Embodiment Movement Practices
-      - list-item: 1 Introduction to Mana Movement PDF
-      - list-item: 1 Welcome Video
-  pricing:
-    pay-in-full:
-      heading: Pay in Full
-      price: $90
-    payment-plan:
-      show: true
-      heading: 2-Month Payment Plan
-      price: $50/month
-  background_image: 
-  overlay_style: 
 cta:
-  heading: Are you ready to meet every moment from a place of feeling open, courageous, and full of creative inspiration?
+  heading: Meet Mana Mei, International Feminine Embodiment Mentor
   description_html: >-
-    <p>Are you ready to move through life feeling deeply safe and expansively free?</p><p>confi<em>Dance</em> will help you reclaim your radiant expression!​</p><p>To meet every moment of life with a sense of EXPANSION, softness, and openness, while also being ANCHORED, grounded, and centered.</p><p>To cultivate more safety and freedom in your body, and in your capacity to express your true self through the way you move, both in your dance and in every moment of your life!</p>
+    <p>Mana Mei is professional dancer, international performer, and Global Leader in the Art of Feminine Embodiment. She is the founder of Liberation Through Movement - a lifestyle and personal transformation business that realigns women with their power to step forward as the ultimate creators of their lives through the modality of embodied dance and intentional movement.</p>
+    <p>Mana is also the Founder of Mana Movement- an embodied movement meditation modality that has already supported thousands of women around the world in cultivating harmonious mind-body-spirit connection and cultivating unwavering inner safety and freedom.</p>
+    <p>Through her life-long studies of classical dance techniques and over 10 years of exploring non-traditional movement, Mana has discovered the immense healing power of somatic movement and intentional dance, and is passionate about sharing this wisdom with people all over the world.</p>
+    <p>Mana believes that our bodies are vessels built to explore all of the complexities of the human experience, and by becoming deeply embodied, we can cultivate unwavering inner safety and freedom, and engage in the world from this place, allows us to live in authentic liberation.</p> 
+    <p>Mana has been mentoring women through pivotal moments of their healing journeys in 1-on-1 and and small group programs, and has supported over 100 women as their personal mentor as they rise into self-empowerment and become the master Creatrix of their lives. Currently, the best way to work with Mana is through her keystone 3-month Liberation Through Movement Mentorship Program.</p>
+    <p>What do women say about the LTM Mentorship Program?...</p>
+    <p>“I feel infinitely grateful and blessed to have this opportunity to immerse myself and fully receive Mana’s wisdom, teachings and practices at such a potent time in the evolution of consciousness, and will continue daily with these rituals for the days weeks and years to come, watching the magic unfold.”</p>
+    <p>“I’m so happy to be part of this journey. It was life changing, it IS LIFE CHANGING…I feel like there is such a new path opening up for me. A path of being TRULY WHO I AM and finding myself and staying true to myself.”</p>
+    <p>“Liberation Through Movement has been by far the best training and gift I’ve given myself to peel away the layers and the programs and the conditionings.”</p>
+    <p>“This was the first step for me in showing up for myself and it has been so powerful. It has changed the way I live my life. I never expected to get as much out of this as I have.”</p>
+    <p>“I’m so happy and so enchanted by this. And I wish every woman would take place in this celebration of Femininity, of sisterhood, of aliveness.”</p>
+    <p>Want to experience a taste of the Liberation Through Movement magic? Join this unique Masterclass experience “This is for Women who Feel…” on July 8th to experience it yourself!</p>
   button:
     text: Register Now
     url: https://manamei.mysamcart.com/checkout/this-is-for-women-who-feel
   background-image:
-    background_image: /uploads/images/manamei-93.JPEG
+    background_image: /uploads/images/women-who-feel-6.png
     background-position: 
     overlay_style: dark
 seo: 
@@ -179,48 +171,14 @@ seo:
   </div>
 </section>
 
-<!-- Investment -->
-<section class="bg-image-style bg-overlay {{page.investment.overlay_style}} p-10p" style="background-image: url('{{page.investment.background_image}}');">
-  <h2 class="text-lg-serif mb-8 text-feature md:text-center">{{page.investment.heading}}</h2>
-  <div class="grid md:grid-cols-3 md:gap-8">
-      <!-- Includes -->
-      <div class="md:col-span-2 text-left">
-          <h3 class="uppercase text-2xl">{{page.investment.includes.heading}}</h3>
-          <ul>
-              {% for item in page.investment.includes.list %}
-              <li class="list-disc ml-4 mb-2">{{item.list-item}}</li>
-              {% endfor %}
-          </ul>
-      </div>
-      <!-- Pricing Options -->
-      <div class="text-left mt-8 md:mt-0">
-          <div class="mb-8">
-              <h3 class="uppercase text-2xl">{{page.investment.pricing.pay-in-full.heading}}</h3>
-              <span>{{page.investment.pricing.pay-in-full.price}}</span>
-              {% if page.investment.pricing.payment-plan.show == true %}
-          </div>
-          <div>
-              <h3 class="uppercase text-2xl">{{page.investment.pricing.payment-plan.heading}}</h3>
-              <span>{{page.investment.pricing.payment-plan.price}}</span>
-          </div>
-          {% endif %}
-      </div>
-      <!-- CTA -->
-  <div class="mt-8">
-      <a href="{{page.cta.button.url}}" class="button">{{page.cta.button.text}}</a>
-  </div>
-  </div>
-</section>
-
 <!-- Testimonials -->
-<section class="bg-image-style bg-overlay 
+<section class="mt-10p bg-image-style bg-overlay 
 {{ page.testimonials.overlay_style }} bg-[url('{{page.testimonials.background_image}}')] p-10p bg-overlay-light" style="background-position: 50% 65%;">
-    <p class="text-feature">Thousands of women around the world are using Mana Movement as a <span class="font-serif">life-changing</span> method of personal transformation...</p>
+    <p class="text-feature text-center">What do women have to say about the Liberation Through Movement modality?...</p>
     <div>
       {% for item in page.testimonials.testimonials %}
       <div class="md:px-10p">
         <p class="text-center mt-8"><em>"{{item.testimonial}}"</em></p>
-        <p class="text-right">{{item.author}}</p>
       </div>
       {% endfor %}
     </div>
@@ -232,7 +190,7 @@ seo:
   <div class="grid md:grid-cols-2">
 
     <!-- Left Column (image) -->
-    <div class="order-last md:order-first m-10p bg-image-style min-h-[60vh] md:min-h-[90vh] mx-10p" style="background-image: url('/uploads/images/manamei-99.png');"></div>
+    <div class="order-last md:order-first m-10p bg-image-style min-h-[60vh] md:min-h-[90vh] mx-10p" style="background-image: url('{{page.cta.background-image.background_image}}');"></div>
 
     <!-- Right Column (text) -->
     <div class="flex items-center justify-center">
