push live for review

--- a/women-who-feel.html
+++ b/women-who-feel.html
@@ -75,6 +75,7 @@ cta:
     <p>Through her life-long studies of classical dance techniques and over 10 years of exploring non-traditional movement, Mana has discovered the immense healing power of somatic movement and intentional dance, and is passionate about sharing this wisdom with people all over the world.</p>
     <p>Mana believes that our bodies are vessels built to explore all of the complexities of the human experience, and by becoming deeply embodied, we can cultivate unwavering inner safety and freedom, and engage in the world from this place, allows us to live in authentic liberation.</p> 
     <p>Mana has been mentoring women through pivotal moments of their healing journeys in 1-on-1 and and small group programs, and has supported over 100 women as their personal mentor as they rise into self-empowerment and become the master Creatrix of their lives. Currently, the best way to work with Mana is through her keystone 3-month Liberation Through Movement Mentorship Program.</p>
+  mobile_image: /uploads/images/manamei-81.jpg
   ltm-description_html: |
     <h2 class="text-feature mb-4">What do women say about the LTM Mentorship Program?...</h2>
     <p>“I feel infinitely grateful and blessed to have this opportunity to immerse myself and fully receive Mana’s wisdom, teachings and practices at such a potent time in the evolution of consciousness, and will continue daily with these rituals for the days weeks and years to come, watching the magic unfold.”</p>
@@ -91,10 +92,11 @@ cta:
     background-position: 
     overlay_style: dark
 seo: 
-  title: confiDance - A Mana Movement Program to FREE your authentic expression on and off the dance floor
-  description: confiDance is a step-by-step Mana Movement Program where you will be guided into activating the Feminine Pathways through every part of the body in order to bring you into deep connection with your authentic movement, building your unique free flow dance that is sourced from the internal impulses of your body, your inner voice of embodied wisdom, your unique radiant Spirit, and the pleasure of fully inhabiting your authentic expression, both on and off the dance floor!
+  title: Women Who Feel Masterclass
+  description: This is for Women who Feel…
+  description: A movement masterclass with Mana Mei, International Women's Embodiment Mentor
   keywords: Mana Movement, feminine embodiment, women's empowerment, dance and movement, Mana Mei, creative expression, embodiment practices, embodied movement, authentic dance
-  social_image: /uploads/images/manamei-91.jpg
+  social_image: /uploads/images/women-who-feel-1.jpg
   hide-from-google: true
 ---
 <!-- Course Heading -->
@@ -179,6 +181,7 @@ seo:
 
 <!-- CTA -->
 <section>
+  <div class="md:hidden bg-image-style mt-10p mx-10p min-h-[60vh]" style="background-image: url('{{page.cta.mobile_image}}');"></div>
   <!-- 2 Columns -->
   <div class="grid md:grid-cols-2">
     
@@ -197,7 +200,7 @@ seo:
 
   </div> 
 
-  <div class="section-padding">
+  <div class="pb-10p lg:pt-5p px-10p md:px-12 lg:px-10p border-b border-feature">
     <div>
     {{page.cta.ltm-description_html}}
     </div>
