--- a/women-who-feel.html
+++ b/women-who-feel.html
@@ -92,7 +92,7 @@ cta:
     background-position: 
     overlay_style: dark
 seo: 
-  title: Women Who Feel Masterclass
+  title: This is for Women Who Feel Masterclass
   description: This is for Women who Feel…
   description: A movement masterclass with Mana Mei, International Women's Embodiment Mentor
   keywords: Mana Movement, feminine embodiment, women's empowerment, dance and movement, Mana Mei, creative expression, embodiment practices, embodied movement, authentic dance
