--- a/women-who-feel.html
+++ b/women-who-feel.html
@@ -17,7 +17,7 @@ heading:
     type: youtube
     text: Watch the video
     url: 
-  background_image: /uploads/images/women-who-feel-2.jpg
+  background_image: /uploads/images/women-who-feel-8.jpg
   overlay_style: medium
 course-description:
   description_html: >-
@@ -100,7 +100,19 @@ seo:
   hide-from-google: true
 ---
 <!-- Course Heading -->
-<section class="bg-image-style min-h-[90vh]" style="background-image: url('{{page.heading.background_image}}');"></section>
+<section class="bg-image-style min-h-[90vh] p-5p flex flex-col justify-between items-center
+         text-center" style="background-image: url('{{page.heading.background_image}}');">
+  <div>
+    <p class="uppercase text-[3rem] leading-tight tracking-tighter font-medium mb-0">July 8</p>
+    <p class="ext-[1.5rem] font-medium uppercase">11am California<br>
+    8pm Central Europe</p>
+  </div>
+  <div>
+    <h1 class="uppercase text-[3rem] leading-tight tracking-tighter font-medium">This is for Women Who <span class="text-[#fcbe92]">Feel</span>...<br>
+    (Even if it's just a tiny bit)</h1>
+    <p class="text-[1.5rem] font-medium">A <span class="text-[#fcbe92]">movement masterclass</span> with Mana Mei, International Women's Embodiment Mentor</p>
+  </div>
+</section>
 
 <!-- Course Description -->
 <section class="p-10p">
