hero banner responsive

--- a/women-who-feel.html
+++ b/women-who-feel.html
@@ -108,9 +108,9 @@ seo:
     8pm Central Europe</p>
   </div>
   <div>
-    <h1 class="uppercase text-[3rem] leading-tight tracking-tighter font-medium">This is for Women Who <span class="text-[#fcbe92]">Feel</span>...<br>
+    <h1 class="uppercase text-[2rem] md:text-[3rem] leading-tight tracking-tighter font-medium">This is for Women Who <span class="text-[#fcbe92]">Feel</span>...<br>
     (Even if it's just a tiny bit)</h1>
-    <p class="text-[1.5rem] font-medium">A <span class="text-[#fcbe92]">movement masterclass</span> with Mana Mei, International Women's Embodiment Mentor</p>
+    <p class="mt-2 lg:mt-0 md:text-[1.5rem] font-medium leading-tight">A <span class="text-[#fcbe92]">movement masterclass</span> with Mana Mei, International Women's Embodiment Mentor</p>
   </div>
 </section>
 
