--- a/women-who-feel.html
+++ b/women-who-feel.html
@@ -51,9 +51,6 @@ inside-the-course:
     <p>I am an International Feminine Embodied Mentor and Facilitator. I have spent the last decade carefully crafting an entire modality of embodied movement practices that are accessible to any woman who is ready to return to wholeness in the Feminine Way - <strong><em>the Liberation Through Movement Model</em></strong></p>
     <p>Liberation Through Movement has supported <strong><em>thousands</em></strong> of women around the world along their healing journeys by providing a safe space to explore the beautiful, yet complex, inner landscape of our physical and energetic body.</p>
     <p>I have also worked intimately as personal Feminine Embodiment mentor for over 100 women through my keystone offering- the Liberation Through Movement Mentorship, a life-changing, deeply transformational 3-month Live Online Program! This is my favorite!</p>
-    <p>My hope is that during this Masterclass, I can give you a taste of the sweet nectar of this potent movement medicine and open you up to your own potential to bring movement into your every day life as a powerful tool for healing and transformation.</p>
-    <p>For only a small investment of <strong><em>$19</em></strong>, you have the unique opportunity to join me and your global sisterhood LIVE for this Masterclass to receive powerful embodiment knowledge and practices that will support you in your healing journey for the rest of your life. It is so powerful when we come together to share our energy in these expansive containers that reach around the world…Remember- you are not alone!</p>
-    <p>In the case that you cannot join us live, no worries! Every woman who registers and pays will also receive the recording of the Masterclass which will be available to watch on replay for ONE WEEK after the Masterclass.</p>
   background-image:
     background_image: /uploads/images/women-who-feel-4.png
     image_focus: left
@@ -75,7 +72,7 @@ cta:
     <p>Through her life-long studies of classical dance techniques and over 10 years of exploring non-traditional movement, Mana has discovered the immense healing power of somatic movement and intentional dance, and is passionate about sharing this wisdom with people all over the world.</p>
     <p>Mana believes that our bodies are vessels built to explore all of the complexities of the human experience, and by becoming deeply embodied, we can cultivate unwavering inner safety and freedom, and engage in the world from this place, allows us to live in authentic liberation.</p> 
     <p>Mana has been mentoring women through pivotal moments of their healing journeys in 1-on-1 and and small group programs, and has supported over 100 women as their personal mentor as they rise into self-empowerment and become the master Creatrix of their lives. Currently, the best way to work with Mana is through her keystone 3-month Liberation Through Movement Mentorship Program.</p>
-  mobile_image: /uploads/images/manamei-81.jpg
+  mobile_image: /uploads/images/women-who-feel-6.png
   ltm-description_html: |
     <h2 class="text-feature mb-4">What do women say about the LTM Mentorship Program?...</h2>
     <p>“I feel infinitely grateful and blessed to have this opportunity to immerse myself and fully receive Mana’s wisdom, teachings and practices at such a potent time in the evolution of consciousness, and will continue daily with these rituals for the days weeks and years to come, watching the magic unfold.”</p>
@@ -166,9 +163,6 @@ seo:
               <h2 class="text-lg-serif text-feature">{{page.inside-the-course.heading}}</h2>
               <p>{{page.inside-the-course.description_html}}</p>
           </div>
-          <div class="mt-8">
-              <a href="{{page.cta.button.url}}" class="button">{{page.cta.button.text}}</a>
-          </div>
       </div>
 
       <!-- Right Column (image) -->
@@ -176,10 +170,24 @@ seo:
           style="background-image: url('{{page.inside-the-course.background-image.background_image}}');">
       </div>
   </div>
+
+  <div class="mx-10p">
+    <div class="lg:hidden bg-image-style min-h-[60vh]" style="background-image: url('uploads/images/women-who-feel-10.jpeg');"></div>
+    <div class="lg:text-center my-10p">
+      <div>
+        <p>My hope is that during this Masterclass, I can give you a taste of the sweet nectar of this potent movement medicine and open you up to your own potential to bring movement into your every day life as a powerful tool for healing and transformation.</p>
+        <p>For only a small investment of <strong><em>$19</em></strong>, you have the unique opportunity to join me and your global sisterhood LIVE for this Masterclass to receive powerful embodiment knowledge and practices that will support you in your healing journey for the rest of your life. It is so powerful when we come together to share our energy in these expansive containers that reach around the world…Remember- you are not alone!</p>
+        <p>In the case that you cannot join us live, no worries! Every woman who registers and pays will also receive the recording of the Masterclass which will be available to watch on replay for ONE WEEK after the Masterclass.</p>
+      </div>
+      <div class="mt-8 lg:text-center">
+        <a href="{{page.cta.button.url}}" class="button">{{page.cta.button.text}}</a>
+      </div>
+    </div>
+  </div>
 </section>
 
 <!-- Testimonials -->
-<section class="mt-10p md:mt-0 lg:mt-10p bg-image-style bg-overlay 
+<section class="bg-image-style bg-overlay 
 {{ page.testimonials.overlay_style }} bg-[url('{{page.testimonials.background_image}}')] p-10p bg-overlay-light" style="background-position: 50% 65%;">
     <p class="text-feature text-center">What do women have to say about the Liberation Through Movement modality?...</p>
     <div>
@@ -194,6 +202,7 @@ seo:
 <!-- CTA -->
 <section>
   <div class="md:hidden bg-image-style mt-10p mx-10p min-h-[60vh]" style="background-image: url('{{page.cta.mobile_image}}');"></div>
+  
   <!-- 2 Columns -->
   <div class="grid md:grid-cols-2">
     
