--- a/women-who-feel.html
+++ b/women-who-feel.html
@@ -26,7 +26,7 @@ course-description:
     <p>Choices that will hopefully result in actually being happy and satisfied with life?</p>
     <p class="mb-0">What do we choose that will ensure that we can move through life feeling safe and secure, and authentic and free?</p>
 who-its-for:
-  heading: If you are a woman who desires to feel...
+  heading_html: If you are a woman who desires to <span class="text-[#fcbe92]">feel</span>...
   description_html: >-
     <p>Safe in your Body, Safe in your emotions, Safe in the World & Free in your Body, Free in your Emotions, Free in the World… Then you are not alone.</p>
     <p>If you are a woman who (sometimes) feels…</p>
@@ -46,7 +46,7 @@ about:
     <p>Through this masterclass, you will be held in a container of SAFETY and FREEDOM to be guided to take the driver seat of your own healing journey by connecting with the immense wisdom and healing power within your own body.</p>
   background_image: /uploads/images/women-who-feel-9.png
 inside-the-course:
-  heading: Hi, I’m Mana Mei!
+  heading_html: Hi, I’m <span class="text-[#fcbe92]">Mana Mei</span>!
   description_html: >-
     <p>I am an International Feminine Embodied Mentor and Facilitator. I have spent the last decade carefully crafting an entire modality of embodied movement practices that are accessible to any woman who is ready to return to wholeness in the Feminine Way - <strong><em>the Liberation Through Movement Model</em></strong></p>
     <p>Liberation Through Movement has supported <strong><em>thousands</em></strong> of women around the world along their healing journeys by providing a safe space to explore the beautiful, yet complex, inner landscape of our physical and energetic body.</p>
@@ -74,7 +74,7 @@ cta:
     <p>Mana has been mentoring women through pivotal moments of their healing journeys in 1-on-1 and and small group programs, and has supported over 100 women as their personal mentor as they rise into self-empowerment and become the master Creatrix of their lives. Currently, the best way to work with Mana is through her keystone 3-month Liberation Through Movement Mentorship Program.</p>
   mobile_image: /uploads/images/women-who-feel-6.png
   ltm-description_html: |
-    <h2 class="text-feature mb-4">What do women say about the LTM Mentorship Program?...</h2>
+    <h2 class="text-[1.5rem] font-medium uppercase mb-2">What do women say about the <span class="text-[#fcbe92]">LTM Mentorship Program</span>?...</h2>
     <p>“I feel infinitely grateful and blessed to have this opportunity to immerse myself and fully receive Mana’s wisdom, teachings and practices at such a potent time in the evolution of consciousness, and will continue daily with these rituals for the days weeks and years to come, watching the magic unfold.”</p>
     <p>“I’m so happy to be part of this journey. It was life changing, it IS LIFE CHANGING…I feel like there is such a new path opening up for me. A path of being TRULY WHO I AM and finding myself and staying true to myself.”</p>
     <p>“Liberation Through Movement has been by far the best training and gift I’ve given myself to peel away the layers and the programs and the conditionings.”</p>
@@ -101,7 +101,7 @@ seo:
          text-center" style="background-image: url('{{page.heading.background_image}}');">
   <div>
     <p class="uppercase text-[3rem] leading-tight tracking-tighter font-medium mb-0">July 8</p>
-    <p class="ext-[1.5rem] font-medium uppercase">11am California<br>
+    <p class="text-[1.5rem] font-medium uppercase">11am California<br>
     8pm Central Europe</p>
   </div>
   <div>
@@ -129,7 +129,7 @@ seo:
     <!-- Right Column (text) -->
     <div class="flex items-center justify-center">
       <div class="md:py-10p pl-10p pr-10p md:pr-[20%]">
-        <h2 class="text-lg-serif text-feature">{{page.who-its-for.heading}}</h2>
+        <h2 class="text-[1.5rem] font-medium uppercase mb-2">{{page.who-its-for.heading_html}}</h2>
         <div>{{page.who-its-for.description_html}}</div>
       </div>
     </div>
@@ -160,7 +160,7 @@ seo:
       <!-- Left Column (text) -->
       <div class="lg:col-span-2 p-10p">
           <div>
-              <h2 class="text-lg-serif text-feature">{{page.inside-the-course.heading}}</h2>
+              <h2 class="text-[1.5rem] font-medium uppercase mb-2">{{page.inside-the-course.heading_html}}</h2>
               <p>{{page.inside-the-course.description_html}}</p>
           </div>
       </div>
@@ -189,7 +189,7 @@ seo:
 <!-- Testimonials -->
 <section class="bg-image-style bg-overlay 
 {{ page.testimonials.overlay_style }} bg-[url('{{page.testimonials.background_image}}')] p-10p bg-overlay-light" style="background-position: 50% 65%;">
-    <p class="text-feature text-center">What do women have to say about the Liberation Through Movement modality?...</p>
+    <p class="text-[1.5rem] font-medium uppercase mb-2 text-center">What do women have to say about the <span class="text-[#fcbe92]">Liberation Through Movement</span> modality?...</p>
     <div>
       {% for item in page.testimonials.testimonials %}
       <div class="md:px-10p">
@@ -202,7 +202,7 @@ seo:
 <!-- CTA -->
 <section>
   <div class="md:hidden bg-image-style mt-10p mx-10p min-h-[60vh]" style="background-image: url('{{page.cta.mobile_image}}');"></div>
-  
+
   <!-- 2 Columns -->
   <div class="grid md:grid-cols-2">
     
