--- a/women-who-feel.html
+++ b/women-who-feel.html
@@ -85,7 +85,7 @@ cta:
     text: Register Now
     url: https://manamei.mysamcart.com/checkout/this-is-for-women-who-feel
   background-image:
-    background_image: /uploads/images/women-who-feel-6.png
+    background_image: /uploads/images/manamei-63.jpg
     background-position: 
     overlay_style: dark
 seo: 
@@ -221,7 +221,7 @@ seo:
 
   </div> 
 
-  <div class="pb-10p lg:pt-5p px-10p md:px-12 lg:px-10p border-b border-feature">
+  <div class="pb-24 md:pb-10p lg:pt-5p px-10p md:px-12 lg:px-10p border-b border-feature">
     <div>
     {{page.cta.ltm-description_html}}
     </div>
