--- a/women-who-feel.html
+++ b/women-who-feel.html
@@ -48,7 +48,7 @@ about:
 inside-the-course:
   heading_html: Hi, I’m <span class="text-[#fcbe92]">Mana Mei</span>!
   description_html: >-
-    <p>I am an International Feminine Embodied Mentor and Facilitator. I have spent the last decade carefully crafting an entire modality of embodied movement practices that are accessible to any woman who is ready to return to wholeness in the Feminine Way - <strong><em>the Liberation Through Movement Model</em></strong></p>
+    <p>I am an International Feminine Embodiment Mentor and Facilitator. I have spent the last decade carefully crafting an entire modality of embodied movement practices that are accessible to any woman who is ready to return to wholeness in the Feminine Way - <strong><em>the Liberation Through Movement Model</em></strong></p>
     <p>Liberation Through Movement has supported <strong><em>thousands</em></strong> of women around the world along their healing journeys by providing a safe space to explore the beautiful, yet complex, inner landscape of our physical and energetic body.</p>
     <p>I have also worked intimately as personal Feminine Embodiment mentor for over 100 women through my keystone offering- the Liberation Through Movement Mentorship, a life-changing, deeply transformational 3-month Live Online Program! This is my favorite!</p>
   background-image:
